# SSH_DeviceManager

./: .gitignore  .gitmodules  .pylintrc  CHANGELOG.md  README.md  SECURITY.md  SSH_DeviceManager.py  SSH_DeviceManager.py.bak  SSH_DeviceManager.pyproj  SSH_DeviceManager.sln  TODO.md  customizer.py  pyproject.toml  sections.json  ssh_device_manager_config.json  test_SSH_DeviceManager.py  test_customizer.py
.constitution-bootstrap/: adoption-report.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  constitution-tests.yml  create-release-tag.yml  pylint.yml  suggest-release-version.yml
docs/: AGENT_HANDOFF.md  ARCHITECTURE.md  COMMAND_REFERENCE.md  ENV_VARS.md  MEMORY.md  MVP_BACKLOG.md  OPERATIONS.md  OTS_SOFTWARE.md  PRODUCT_REQUIREMENTS.md  READING_GUIDE.md  REQUIREMENTS_TRACEABILITY.md  SESSION_PLAN.md  SETUP.md  TEST_GHERKIN.md  TEST_MATRIX.md  TEST_PLAN.md  TROUBLESHOOTING.md  release-process.md
mcp-server/: index.js  package-lock.json  package.json
ssh_device_manager/: __init__.py  app.py  config.py  constants.py  models.py  output.py  paramiko_compat.py  sections_loader.py  ssh_manager.py  themes.py  validation.py
ssh_device_manager/controllers/: __init__.py  actions.py  connection.py  profiles.py  sections.py
